2004-01-22  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (reent_data): Make global.
	* cygwin.din: Reexport reent_data.

2004-01-22  Christopher Faylor  <cgf@redhat.com>

	* cygtls.cc (_threadinfo::remove): Don't assume that we are removing
	_my_tls.
	* exceptions.cc (setup_handler): Improve debugging output.
	(call_signal_handler_now): Remove ill-advised debugger call.
	* sigproc.cc (sigcomplete_main): Delete.
	(sig_send): Honor FIXME and avoid using main thread's completion event
	for everything or suffer races.
	(pending_signals::add): Default stored mask to current process mask
	rather than mask at time of signal send.
	(wait_sig): Add debugging output.
	* sigproc.h (sigpacket::mask_storage): Delete.

2004-01-22  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::open): Revert isfs change.

2004-01-21  Christopher Faylor  <cgf@redhat.com>

	* devices.in: Change raw com device to more correct form.

2004-01-21  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::open): Use major numbers rather than
	device numbers to control special behavior for devices which take
	units.
	* fhandler_raw.cc (fhandler_dev_raw::writebuf): Ditto.
	(fhandler_dev_raw::fstat): Ditto.
	(fhandler_dev_raw::open): Ditto.
	(fhandler_dev_raw::ioctl): Ditto.

2004-01-21  Nicholas Wourms  <nwourms@netscape.net>

	* signal.cc (sigaction): Fix if-statement typo.

2004-01-21  Christopher Faylor  <cgf@redhat.com>

	* cygtls.cc (handle_threadlist_exception): Change logic, improve
	debugging output.

2004-01-21  Christopher Faylor  <cgf@redhat.com>

	* fhandler_tty.cc (fhandler_tty::ioctl): Semi-revert 2003-09-26 change
	for TIOCSWINSZ.  It is not an error for ioctl_request_event to be
	missing.

2004-01-20  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (pending_signals::save): New function.
	(pending_signals::restore): Ditto.
	(sig_clear): Save/restore current queue pointer.
	(wait_sig): Delete signals marked as such.